Implemented User test with the option to retake or view previous result.
Adjusted some parts of the logic, to make it work properly.

Added new Database method for the user test.

Created a new interface for TestBeheer.

Made some other small changes.

--- a/VrijwilligersWerkApp/Pages/Home.cshtml
+++ b/VrijwilligersWerkApp/Pages/Home.cshtml
@@ -3,23 +3,26 @@
 @{
     ViewData["Title"] = "Home";
 }
-
-
 <div class="container mt-5">
     <div class="text-center">
         <h1 class="display-4 mb-6">Welkom bij Vrijwilligerswerk Platform</h1>
         <p class="lead">Beheer en registreer vrijwilligerswerk eenvoudig.</p>
     </div>
 
-    <div class="row justify-content-center mt-10">
-        <div class="col-md-5">
-            <a href="/NieuwWerk/MaakWerk" class="btn btn-primary btn-lg w-50">
+    <div class="row justify-content-center mt-5">
+        <div class="col-auto">
+            <a href="/NieuwWerk/MaakWerk" class="btn btn-primary btn-lg">
                 Nieuw Vrijwilligerswerk Toevoegen
             </a>
         </div>
-        <div class="col-md-5">
-            <a href="/RegistreerWerk/VrijwilligersWerkOverzicht" class="btn btn-success btn-lg w-50">
+        <div class="col-auto">
+            <a href="/RegistreerWerk/VrijwilligersWerkOverzicht" class="btn btn-success btn-lg">
                 Registreer Voor Vrijwilligerswerk
+            </a>
+        </div>
+        <div class="col-auto">
+            <a href="/GebruikersTest/GebruikersTest" class="btn btn-primary btn-lg">
+                Maak Gebruikerstest
             </a>
         </div>
     </div>
