--- a/VrijwilligersWerkApp/Pages/Shared/_Layout.cshtml
+++ b/VrijwilligersWerkApp/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/NieuwWerk/MaakWerk">Maak werk aan</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/GebruikersTest/GebruikersTest">Test</a>
+                        </li>
                     </ul>
                 </div>
             </div>
