--- a/VrijwilligersWerkApp/Pages/Shared/_Layout.cshtml
+++ b/VrijwilligersWerkApp/Pages/Shared/_Layout.cshtml
@@ -22,13 +22,16 @@
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/RegistreerWerk/VrijwilligersWerkOverzicht">Werk Registratie</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/RegistreerWerk/VrijwilligersWerkOverzicht">WerkRegistratie</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/NieuwWerk/MaakWerk">Maak werk aan</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/NieuwWerk/MaakWerk">Werk aanmaken</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/GebruikersTest/GebruikersTest">Test</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/GebruikersTest/GebruikersTest">GebruikersTest</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" asp-page="/MijnProfiel/GebruikersProfiel">Mijn Profiel</a>
                             </li>
                         </ul>
                     </div>
